hphp/test/slow/using/bad-function2.php.expectf
Fatal error: syntax error, unexpected T_VARIABLE, expecting '(' in %s/test/slow/using/bad-function2.php on line 5